--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "strictNullChecks": true,
     "target": "ES2018",
     "declaration": true,
-    "lib": ["ES2018"],
+    "lib": ["ES2018", "DOM"],
     "module": "CommonJS",
     "moduleResolution": "Node"
   }
