SMP protocol commands, serializing, parsing (#1)
* SMP protocol commands, serializing, parsing (WIP)

* parsing SMP protocol commands

* test: parse and serialize SMP commands

* parse ISO date, parse MSG test

* add base64 encoding/parsing/decoding using polyfills for browser btoa/atob

* ci tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "include": ["src"],
+  "include": ["src", "tests"],
   "compilerOptions": {
     "outDir": "dist",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
@@ -15,7 +15,7 @@
     "strictNullChecks": true,
     "target": "ES2018",
     "declaration": true,
-    "lib": ["ES2018"],
+    "lib": ["ES2018", "DOM"],
     "module": "CommonJS",
     "moduleResolution": "Node"
   }
