--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "build": "rm -rf dist && tsc",
     "prettier:write": "prettier --write './**/*.{json,yaml,js,ts}'",
     "prettier:check": "prettier --list-different './**/*.{json,yaml,js,ts}'",
     "eslint": "eslint --ext .ts ./src/**/*",
-    "test": "npm run prettier:check && npm run eslint && tsc --noEmit"
+    "test": "npm run prettier:check && npm run eslint && jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,17 @@
   },
   "homepage": "https://github.com/simplex-chat/simplexmq-js#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "husky": {
