--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
+    "isomorphic-webcrypto": "^2.3.8",
     "isomorphic-ws": "^4.0.1",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
