--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
+    "@types/ws": "^7.4.4",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
+    "isomorphic-webcrypto": "^2.3.8",
+    "isomorphic-ws": "^4.0.1",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.1",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "ws": "^7.4.5"
   },
   "husky": {
     "hooks": {
