--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -50,6 +50,7 @@ rules:
   "@typescript-eslint/default-param-last": error
   dot-notation: off
   "@typescript-eslint/dot-notation": error
+  "@typescript-eslint/no-empty-function": off
   "@typescript-eslint/explicit-function-return-type": [error, allowExpressions: true]
   "@typescript-eslint/explicit-member-accessibility": [error, accessibility: no-public]
   "@typescript-eslint/no-extraneous-class": error
