--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -29,7 +29,6 @@ rules:
   no-redeclare: error
   no-return-assign: error
   no-sequences: error
-  no-shadow: warn
   no-template-curly-in-string: error
   no-trailing-spaces: error
   no-undef-init: error
@@ -57,6 +56,7 @@ rules:
   no-invalid-this: off
   "@typescript-eslint/no-invalid-this": error
   "@typescript-eslint/no-misused-new": error
+  "@typescript-eslint/no-shadow": warn
   "@typescript-eslint/no-unused-expressions": error
   "@typescript-eslint/no-unused-vars": [error, argsIgnorePattern: ^_]
   "@typescript-eslint/prefer-function-type": error
